@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-11T01:14:07Z",
-  "count_outdated" : 1979,
-  "uniques_outdated" : 1217,
-  "count" : 1994,
-  "uniques" : 1232,
+  "timestamp" : "2025-10-12T01:20:15Z",
+  "count_outdated" : 1980,
+  "uniques_outdated" : 1218,
+  "count" : 1996,
+  "uniques" : 1234,
   "clones" : [
-    {
-      "timestamp": "2025-09-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-29T00:00:00Z",
       "count": 4,
@@ -97,6 +88,24 @@
     },
     {
       "timestamp": "2025-10-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
