@@ -1,12 +1,7 @@
 {
-  "count": 15,
+  "count": 16,
   "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2025-09-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-09-29T00:00:00Z",
       "count": 4,
@@ -54,6 +49,16 @@
     },
     {
       "timestamp": "2025-10-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-12T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
