@@ -1,3 +1,12 @@
+2025-10-12T01:20:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18437218222 # 794
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-12
+* notice: last 14d: unq all: 7 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 1217 1979 / 1232 1994
+* notice: next accum: outdated-unq outdated-all / unq all: 1218 1980 / 1234 1996
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-09-28] / [2025-10-11 2025-10-12]
+
 2025-10-11T01:14:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18422191330 # 793
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-11
